# JniDemo_iv

app/: CMakeLists.txt  build.gradle
app/libs/jpeg/: Hello.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_jnidemo_iv_JniUtil.c  com_jnidemo_iv_JniUtil.h
app/src/main/java/com/jnidemo_iv/: JniUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
